Code formatting and styling