@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2001-2021 Food and Agriculture Organization of the
+ * Copyright (C) 2001-2024 Food and Agriculture Organization of the
  * United Nations (FAO-UN), United Nations World Food Programme (WFP)
  * and United Nations Environment Programme (UNEP)
  *
@@ -202,7 +202,7 @@ public class UsersApi {
             myUserId.equals(Integer.toString(userIdentifier))) {
             Optional<User> user = userRepository.findById(userIdentifier);
 
-            if (!user.isPresent()) {
+            if (user.isEmpty()) {
                 throw new UserNotFoundEx(Integer.toString(userIdentifier));
             }
 
@@ -251,7 +251,7 @@ public class UsersApi {
             try {
                 Optional<User> user = userRepository.findById(userIdentifier);
 
-                if (!user.isPresent()) {
+                if (user.isEmpty()) {
                     throw new UserNotFoundEx(Integer.toString(userIdentifier));
                 }
 
@@ -350,7 +350,7 @@ public class UsersApi {
         List<UserGroup> userGroups = userGroupRepository.findAll(UserGroupSpecs.hasUserId(userIdentifier));
 
         userGroupRepository.deleteAllByIdAttribute(UserGroupId_.userId,
-            Arrays.asList(userIdentifier));
+            List.of(userIdentifier));
 
         userSavedSelectionRepository.deleteAllByUser(userIdentifier);
 
@@ -409,7 +409,7 @@ public class UsersApi {
                 return new ResponseEntity<>(HttpStatus.OK);
             }
         } else {
-            throw new IllegalArgumentException(String.format("Property '%s' is not supported. You can only check username and email"));
+            throw new IllegalArgumentException("Property is not supported. You can only check username and email");
         }
         return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
@@ -557,16 +557,16 @@ public class UsersApi {
 
         // TODO: CheckAccessRights
 
-        User user = userRepository.findById(userIdentifier).get();
-        if (user == null) {
-            throw new IllegalArgumentException("No user found with id: "
-                + userDto.getId());
+        Optional<User> userOptional = userRepository.findById(userIdentifier);
+        if (userOptional.isEmpty()) {
+            throw new IllegalArgumentException(String.format("No user found with id: %s", userDto.getId()));
         }
+        User user = userOptional.get();
 
         // Check no duplicated username and if we are adding a duplicate existing name with other case combination
         List<User> usersWithUsernameIgnoreCase = userRepository.findByUsernameIgnoreCase(userDto.getUsername());
-        if (usersWithUsernameIgnoreCase.size() != 0 &&
-            (!usersWithUsernameIgnoreCase.stream().anyMatch(u -> u.getId() == userIdentifier)
+        if (!usersWithUsernameIgnoreCase.isEmpty() &&
+            (usersWithUsernameIgnoreCase.stream().noneMatch(u -> u.getId() == userIdentifier)
                 || usersWithUsernameIgnoreCase.stream().anyMatch(u ->
                 u.getUsername().equals(userDto.getUsername()) && u.getId() != userIdentifier)
             )) {
@@ -588,7 +588,7 @@ public class UsersApi {
         groups.addAll(processGroups(userDto.getGroupsReviewer(), Profile.Reviewer));
         groups.addAll(processGroups(userDto.getGroupsUserAdmin(), Profile.UserAdmin));
 
-        //If it is a useradmin updating,
+        //If it is an useradmin updating,
         //maybe we don't know all the groups the user is part of
         if (!Profile.Administrator.equals(myProfile)) {
             List<Integer> myUserAdminGroups = userGroupRepository.findGroupIds(Specification.where(
@@ -642,7 +642,6 @@ public class UsersApi {
 
         List<UserGroup> userGroups = userGroupRepository.findAll(UserGroupSpecs
             .hasUserId(user.getId()));
-        //userAudit.setUserGroups(userGroups);
 
         UserAuditable userAuditable = UserAuditable.build(user, userGroups);
         userAuditableService.auditSave(userAuditable);
@@ -706,7 +705,7 @@ public class UsersApi {
         }
 
         Optional<User> user = userRepository.findById(userIdentifier);
-        if (!user.isPresent()) {
+        if (user.isEmpty()) {
             throw new UserNotFoundEx(Integer.toString(userIdentifier));
         }
 
@@ -756,10 +755,12 @@ public class UsersApi {
 
         if (Profile.Administrator.equals(myProfile) || Profile.UserAdmin.equals(myProfile) || myUserId.equals(Integer.toString(userIdentifier))) {
             // -- get the profile of the user id supplied
-            User user = userRepository.findById(userIdentifier).get();
-            if (user == null) {
+            Optional<User> userOptional = userRepository.findById(userIdentifier);
+
+            if (userOptional.isEmpty()) {
                 throw new IllegalArgumentException("user " + userIdentifier + " doesn't exist");
             }
+            User user = userOptional.get();
 
             String userProfile = user.getProfile().name();
 
@@ -825,7 +826,7 @@ public class UsersApi {
             .hasUserId(user.getId()));
 
         // Have a quick reference of existing groups and profiles for this user
-        Set<String> listOfAddedProfiles = new HashSet<String>();
+        Set<String> listOfAddedProfiles = new HashSet<>();
         for (UserGroup ug : all) {
             String key = ug.getProfile().name() + ug.getGroup().getId();
             listOfAddedProfiles.add(key);
@@ -833,11 +834,10 @@ public class UsersApi {
 
         // We start removing all old usergroup objects. We will remove the
         // explicitly defined for this call
-        Collection<UserGroup> toRemove = new ArrayList<UserGroup>();
-        toRemove.addAll(all);
+        Collection<UserGroup> toRemove = new ArrayList<>(all);
 
         // New pairs of group-profile we need to add
-        Collection<UserGroup> toAdd = new ArrayList<UserGroup>();
+        Collection<UserGroup> toAdd = new ArrayList<>();
 
         // For each of the parameters on the request, make sure the group is
         // updated.
@@ -897,7 +897,7 @@ public class UsersApi {
 
 
     private List<GroupElem> processGroups(List<String> groupsToProcessList, Profile profile) {
-        List<GroupElem> groups = new LinkedList<GroupElem>();
+        List<GroupElem> groups = new LinkedList<>();
         for (String g : groupsToProcessList) {
             groups.add(new GroupElem(profile.name(), Integer.parseInt(g)));
         }
